--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="dom4j-1.6.1.jar"/>
 	<classpathentry kind="lib" path="beautyeye_lnf.jar"/>
+	<classpathentry kind="lib" path="poi-3.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
